Docs: reflect AD integration, Settings scroll fix, and config file hygiene
Updates spanning all three of this session's changes, in one commit
since they touch overlapping sections of the same shared doc files:

- architecture.md: new "Active Directory Integration (AdApiService)"
  pattern section
- database.md, CLAUDE.md: ad_api_token row in the APP_SETTINGS tables
- requirements.md: FR-10 (AD lookups via REST) and FR-13 (AD API
  admin-gating, verify-before-save) updated
- use-cases.md: UC-07 (real query-variant/merge behavior, replacing
  the old mock-only description) and UC-10 (AD API config step,
  scrolling Settings panel) updated
- README.md: new "Active Directory (AD) API" and "Remote database
  (PostgreSQL)" configuration sections with the required API contract
  and a placeholder response example; stale Kerberos/Launcher setup
  instructions and "35 unit tests" count removed/corrected; setup
  instructions updated for the new app-config.json.example template
- CLAUDE.md: corrected the now-false "AD dot is always green" known
  issue; added a known-issue note about the fixed-size Scene + Settings
  ScrollPane requirement for future cards
- AboutView.fxml ("Manual de Usuario"): new §8.3 documenting AD API
  setup for end users

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>